@@ -1,3 +1,4 @@
-*.py[cod~]
+*.py[cod]
 *#
+*~
 TAGS
